base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
  http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: caddy-service
          port:
            name: http
